--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@ section {
 }
 .jumbotron {
     border-radius:0;
-    background-image:url('/jumbotron.jpg');
+    background-image:url('/img/jumbotron.jpg');
     text-align:center;
 }
 #lsst {
-    background-image:url('/lsst2.jpg');
+    background-image:url('/img/lsst2.jpg');
     overflow:hidden;
 }
 .navbar {
@@ -389,15 +389,15 @@ eups distrib install -t v12_0 lsst_apps</pre>
         <div class="row">
             <div class="col-12 center">
                 <h4>Sponsors</h4>
-                <img src="logos/nsf4.gif" class="logo-agency" alt="NSF">
-                <img src="logos/doe.png" class="logo-agency" alt="DOE">
-                <img src="logos/lsst.png" class="logo" alt="LSST Headquarters">
-                <img src="logos/princeton.png" class="logo" alt="Princeton University">
-                <img src="logos/uw.png" class="logo" alt="University of Washington">
-                <img src="logos/ncsa.png" class="logo" alt="NCSA">
-                <img src="logos/ipac.png" class="logo" alt="IPAC">
-                <img src="logos/slac.png" class="logo" alt="SLAC National Accelerator Lab">
-                <img src="logos/noao.png" class="logo" alt="NOAO">
+                <img src="/img/logos/nsf4.gif" class="logo-agency" alt="NSF">
+                <img src="/img/logos/doe.png" class="logo-agency" alt="DOE">
+                <img src="/img/logos/lsst.png" class="logo" alt="LSST Headquarters">
+                <img src="/img/logos/princeton.png" class="logo" alt="Princeton University">
+                <img src="/img/logos/uw.png" class="logo" alt="University of Washington">
+                <img src="/img/logos/ncsa.png" class="logo" alt="NCSA">
+                <img src="/img/logos/ipac.png" class="logo" alt="IPAC">
+                <img src="/img/logos/slac.png" class="logo" alt="SLAC National Accelerator Lab">
+                <img src="/img/logos/noao.png" class="logo" alt="NOAO">
             </div>
     </div>
 </section> <!-- /.container -->
