--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@ section {
 }
 .jumbotron {
     border-radius:0;
-    background-image:url('{{site.baseurl}}/img/jumbotron.jpg');
+    background-image:url('{{site.url}}/img/jumbotron.jpg');
     text-align:center;
 }
 #lsst {
-    background-image:url('{{site.baseurl}}/img/lsst2.jpg');
+    background-image:url('{{site.url}}/img/lsst2.jpg');
     overflow:hidden;
 }
 .navbar {
@@ -111,7 +111,8 @@ h1,h2,h3,h4,h5,h6 {
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2>DIRAC: Data Intensive Research in Astrophysics and Cosmology</h2>
+                <h2>DIRAC: Data Intensive Research in Astrophysics and Cosmology
+                {{site.url}}, {{site.baseurl}}</h2>
                 <p>
                 The DIRAC Institute: The Data Intensive Research in Astrophysics and Cosmology Institute is a world     leading, interdisciplinary research center that addresses fundamental questions about the origins and   evolution of our universe.
                 </p>
@@ -389,15 +390,15 @@ eups distrib install -t v12_0 lsst_apps</pre>
         <div class="row">
             <div class="col-12 center">
                 <h4>Sponsors</h4>
-                <img src="{{site.baseurl}}/img/logos/nsf4.gif" class="logo-agency" alt="NSF">
-                <img src="{{site.baseurl}}/img/logos/doe.png" class="logo-agency" alt="DOE">
-                <img src="{{site.baseurl}}/img/logos/lsst.png" class="logo" alt="LSST Headquarters">
-                <img src="{{site.baseurl}}/img/logos/princeton.png" class="logo" alt="Princeton University">
-                <img src="{{site.baseurl}}/img/logos/uw.png" class="logo" alt="University of Washington">
-                <img src="{{site.baseurl}}/img/logos/ncsa.png" class="logo" alt="NCSA">
-                <img src="{{site.baseurl}}/img/logos/ipac.png" class="logo" alt="IPAC">
-                <img src="{{site.baseurl}}/img/logos/slac.png" class="logo" alt="SLAC National Accelerator Lab">
-                <img src="{{site.baseurl}}/img/logos/noao.png" class="logo" alt="NOAO">
+                <img src="{{site.url}}/img/logos/nsf4.gif" class="logo-agency" alt="NSF">
+                <img src="{{site.url}}/img/logos/doe.png" class="logo-agency" alt="DOE">
+                <img src="{{site.url}}/img/logos/lsst.png" class="logo" alt="LSST Headquarters">
+                <img src="{{site.url}}/img/logos/princeton.png" class="logo" alt="Princeton University">
+                <img src="{{site.url}}/img/logos/uw.png" class="logo" alt="University of Washington">
+                <img src="{{site.url}}/img/logos/ncsa.png" class="logo" alt="NCSA">
+                <img src="{{site.url}}/img/logos/ipac.png" class="logo" alt="IPAC">
+                <img src="{{site.url}}/img/logos/slac.png" class="logo" alt="SLAC National Accelerator Lab">
+                <img src="{{site.url}}/img/logos/noao.png" class="logo" alt="NOAO">
             </div>
     </div>
 </section> <!-- /.container -->
