remove url stuff from title

--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@ h1,h2,h3,h4,h5,h6 {
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2>DIRAC: Data Intensive Research in Astrophysics and Cosmology
-                {{site.baseurl}}, {{site.baseurl}}</h2>
+                <h2>DIRAC: Data Intensive Research in Astrophysics and Cosmology</h2>
                 <p>
                 The DIRAC Institute: The Data Intensive Research in Astrophysics and Cosmology Institute is a world     leading, interdisciplinary research center that addresses fundamental questions about the origins and   evolution of our universe.
                 </p>
