--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@ h1,h2,h3,h4,h5,h6 {
 <div class="jumbotron">
     <div class="container-fluid">
         <div style="height:10em"></div>
-        <h1>The University of Washington DIRAC Institute<br>
-        URL: {{site.url}}<br>Baseurl:{{site.baseurl}}</h1>
+        <h1>The University of Washington DIRAC Institute</h1>
         <span>Realizing opportunities for data-driven discovery in astronomy and astrophysics.</span>
     <!-- <p>An Institute at the <a href="https://www.washington.edu/">University of Washington</a>.</p> -->
     </div>
