--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@ title: DIRAC Institute
 
 -->
 
-<nav class="navbar navbar-full navbar-dark bg-inverse">
-    <a class="navbar-brand">DIRAC</a>
+<img class="img-nav" src="{{site.baseurl}}/img/logo_circle.png">
+<nav class="navbar navbar-fixed-top navbar-full navbar-dark bg-inverse">
+    <!-- <div class="navbar-brand"> -->
+        <!-- <img class="img-nav" src="{{site.baseurl}}/img/logo_circle.png"> -->
+    <!-- </div> -->
     <ul class="nav navbar-nav float-right">
         <li class="nav-item active">
             <a href="#" class="nav-link">About</a>
