deleted some job text

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ title: DIRAC Institute
                 <div class="video">
                     <iframe src="//www.slideshare.net/slideshow/embed_code/key/fIUc2Bc32FTpPz" width="100%" height="auto" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
                 </div>
-                    <h6 class="center">Slides: <a href="//www.slideshare.net/MarioJuric/lsstdm-building-a-next-generation-survey-data-processing-system" title="LSST/DM: Building a Next Generation Survey Data Processing System" target="_blank">LSST/DM: Building a Next Generation Survey Data Processing System</a> by <a target="_blank" href="https://www.slideshare.net/MarioJuric">Mario Juric</a></h6>
+                    <!-- <h6 class="center">Slides: <a href="//www.slideshare.net/MarioJuric/lsstdm-building-a-next-generation-survey-data-processing-system" title="LSST/DM: Building a Next Generation Survey Data Processing System" target="_blank">LSST/DM: Building a Next Generation Survey Data Processing System</a> by <a target="_blank" href="https://www.slideshare.net/MarioJuric">Mario Juric</a></h6> -->
             </div>
         </div>
 
@@ -257,47 +257,17 @@ eups distrib install -t v12_0 lsst_apps</pre>
             <div class="col-12">
                 <h2>Getting Involved</h2>
                 <p>
-                DIRAC is creating an environment where scientists can harness interdisciplinary expertise to solve some   of the most difficult questions facing Astronomy today. It  provides an interaction space between   Astrophysics, Computer Science, Statistics, and other disciplines. It is a place where ideas across     many disciplines come together and mature; a laboratory for devising new ways of extracting knowledge   from complex systems. 
+                DIRAC is creating an environment where scientists can harness interdisciplinary expertise to solve some of the most difficult questions facing Astronomy today. It  provides an interaction space between Astrophysics, Computer Science, Statistics, and other disciplines. It is a place where ideas across many disciplines come together and mature; a laboratory for devising new ways of extracting knowledge from complex systems. 
                 </p>
-            </div>
+            <!-- </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6"> -->
                 <h4>Postdoctoral and/or Research Scientist Positions</h4>
                 <p>
-                The DIRAC Institute and LSST group in the Astronomy department at the University of Washington have openings for two postdoctoral or research scientist positions. These positions are to help with the processing and analysis of data from the Zwicky Transit Factory (ZTF) and the Large Synoptic Survey Telescope (LSST). The University of Washington is a new member of the ZTF collaboration, a time-domain survey that will see first light in 2017 when it will scan over 3750 square degrees an hour to a depth of 20.5-21 mag. As part of its contributions to ZTF, UW and the DIRAC Institute (a newly established institute for data intensive survey astrophysics at the University of Washington) will  lead the development of a database for storing and serving transient and variable sources detected by   ZTF.        
-                </p>
-
-                <p>
-                    Current LSST DM job openings:
-                </p>
-                    <ul>
-                        <li><a href="https://www.princeton.edu/astro/resources/job/jo/index.xml#comp000055bddc2d0000003dd7408b">Princeton University: Postdoctoral Positions in Software</a> <span class="label label-info">Updated for 2017 start</span></li>
-                    </ul>
-
-                <p>
-                    <button type="button" class="btn btn-inline btn-xs btn-outline-success">Hint</button> To receive e-mails for new LSST DM job openings, subscribe to
-                    the <a href="https://lists.lsst.org/mailman/listinfo/dm-announce">dm-announce</a> mailing list.
-                    For more LSST positions, see the main <a href="http://lsst.org/hiring">LSST Hiring</a> page.
+                The DIRAC Institute and LSST group in the Astronomy department at the University of Washington have openings for two postdoctoral or research scientist positions. These positions are to help with the processing and analysis of data from the Zwicky Transit Factory (ZTF) and the Large Synoptic Survey Telescope (LSST). The University of Washington is a new member of the ZTF collaboration, a time-domain survey that will see first light in 2017 when it will scan over 3750 square degrees an hour to a depth of 20.5-21 mag. As part of its contributions to ZTF, UW and the DIRAC Institute (a newly established institute for data intensive survey astrophysics at the University of Washington) will lead the development of a database for storing and serving transient and variable sources detected by ZTF.        
                 </p>
             </div>
-
-            <div class="col-md-6">
-                <h4>Use, Modify, Contribute</h4>
-                <p>
-                The LSST data processing system, though still in an early construction
-                phase, is an open source (GPLv3) software project
-                free for anyone to use and is open to contributions from the
-                community.
-                </p>
-
-                <p>We invite you to:</p>
-                <ul>
-                    <li><a href="http://pipelines.lsst.io">Read the documentation at pipelines.lsst.io</a></li>
-                    <li><a href="https://community.lsst.org/c/dm">Join the conversation with DM on the LSST Community forum</a></li>
-                    <li><a href="http://github.com/lsst">View the code on GitHub</a></li>
-                </ul>
-            </div> <!-- col -->
         </div> <!-- row -->
     </div> <!-- container -->
 </section>
