new event scraping

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: DIRAC Institute
 
 -->
 
-<img class="img-nav" src="{{site.baseurl}}/img/logo_circle.png">
+<img class="img-nav" src="{{site.baseurl}}/img/dirac_logo_favicon.png">
 <nav class="navbar navbar-fixed-top navbar-full navbar-dark bg-inverse">
     <!-- <div class="navbar-brand"> -->
         <!-- <img class="img-nav" src="{{site.baseurl}}/img/logo_circle.png"> -->
@@ -53,41 +53,31 @@ title: DIRAC Institute
         <div class="row">
             <div class="col-12">
                 <h2>DIRAC: Data Intensive Research in Astrophysics and Cosmology</h2>
+
+                <div class="col-lg-3 col-md-5 vanish float-right">
+                    <img class="img-responsive" src="{{site.baseurl}}/img/dirac_logo_outline.png" alt="DIRAC logo">
+                </div>
+
+                <div class="col-12 appear" style="padding:0;margin:0;">
+                    <img class="img-responsive" src="{{site.baseurl}}/img/dirac_banner.jpg" alt="DIRAC banner">
+                    <hr>
+                </div>
+
                 <p>
-                The DIRAC Institute: The Data Intensive Research in Astrophysics and Cosmology Institute is a world leading, interdisciplinary research center that addresses fundamental questions about the origins and evolution of our universe.
+                The DIRAC Institute is a world leading, interdisciplinary research center that addresses fundamental questions about the origins and evolution of our universe.
                 </p>
 
                 <p>
                 Our research brings together scientists across many disciplines on a mission to understand the nature of Dark Matter and Dark Energy, the emergence of structure within the universe, the formation of galaxies, the birth and evolution of black holes, the transformations of stars, and the origins of the planets.    
                 </p>
 
-                <!-- <p>
-                <a href="#lsst">The LSST</a> is a large optical survey project funded by the National Science
-                Foundation and the Department of Energy. It will continually image the sky,
-                identify changes in near real time, and over a decade of operations collect tens
-                of petabytes of data building up the deepest, widest, image of the Universe.
-                Its data will enable a range of science goals from identification of
-                Near Earth Asteroids to understanding the nature of Dark Energy.
+                <p class="center">
+                <a class="btn btn-primary" role="button" href="{{site.baseurl}}/discovery">Learn more about DIRAC &raquo;</a>
                 </p>
 
-                <p>
-                From fundamental research on the most energetic events in the universe to the search for asteroids that may one day impact the Earth, the science of the next decade will be driven by data. Our ability to make scientific breakthroughs will be governed by our capacity to deal with the scale and complexity of the data from a new generation of telescopes and experiments that will explore the inner and outer reaches of our universe. DIRAC is creating an environment where scientists harness interdisciplinary expertise to solve some of the most difficult questions facing astronomy today; an interaction space between Astrophysics, Computer Science, Statistics, and other disciplines.</p>
-
-                <p>
-                The LSST DM team is distributed across a number of partner
-                institutions &mdash; the <a href="https://project.lsst.org">LSST Project
-                Office</a>, the <a href="http://www.ipac.caltech.edu">Infrared
-                Processing and Analysis Center</a>, the <a
-                href="http://ncsa.illinois.edu">National Center for Supercomputing
-                Applications</a>, <a href="http://www.astro.princeton.edu">Princeton
-                University</a>, <a href="http://slac.stanford.edu">SLAC National
-                Accelerator Laboratory</a>,
-                and the <a href="http://www.astro.washington.edu">University of
-                Washington</a> &mdash; but also helped by contributors from the community,
-                the LSST science collaborations, and other project subsystems.
-                </p> -->
             </div>
         </div> <!--row-->
+
         <h4>Talks &amp; Presentations</h4>
         <div class="row">
             <div class="col-lg-6">
@@ -100,11 +90,11 @@ title: DIRAC Institute
                 <div class="video">
                     <iframe src="//www.slideshare.net/slideshow/embed_code/key/fIUc2Bc32FTpPz" width="100%" height="auto" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
                 </div>
-                    <!-- <h6 class="center">Slides: <a href="//www.slideshare.net/MarioJuric/lsstdm-building-a-next-generation-survey-data-processing-system" title="LSST/DM: Building a Next Generation Survey Data Processing System" target="_blank">LSST/DM: Building a Next Generation Survey Data Processing System</a> by <a target="_blank" href="https://www.slideshare.net/MarioJuric">Mario Juric</a></h6> -->
+                    <p class="center">Slides: <a href="//www.slideshare.net/MarioJuric/lsstdm-building-a-next-generation-survey-data-processing-system" title="LSST/DM: Building a Next Generation Survey Data Processing System" target="_blank">LSST/DM: Building a Next Generation Survey Data Processing System</a> by <a target="_blank" href="https://www.slideshare.net/MarioJuric">Mario Juri&cacute;</a></p>
             </div>
         </div>
 
-        <div class="row no-pad">
+        <!-- <div class="row no-pad">
             <div class="col-12 no-pad">
                 <h3 class="no-pad">Data &amp; Software</h3>
             </div>
@@ -156,7 +146,7 @@ title: DIRAC Institute
             an orchestration framework to launch and monitor jobs on many different systems at
             many different scales.
             </p>
-        </div>
+        </div> -->
         </div>
 
     </div><!-- /.container -->
@@ -175,18 +165,18 @@ title: DIRAC Institute
                 <ul>
                     {% include events_uwastro.html %}
                 </ul>
+                <p class="center">
+                <a class="btn btn-primary" role="button" href="https://depts.washington.edu/astron/events/">See all upcoming UW Astro Events &raquo;</a>
+                </p>
             </div>
+            <p class="appear"><br></p>
             <div class="col-md-6">
                 <h5>eScience Institute</h5>
                 <ul>
                     {% include events_escience.html %}
                 </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
                 <p class="center">
-                <a class="btn btn-primary" role="button" href="https://depts.washington.edu/astron/events/">See all upcoming UW Astronomy Events &raquo;</a>
+                <a class="btn btn-primary" role="button" href="http://escience.washington.edu/escience-events/">See all upcoming eScience Events &raquo;</a>
                 </p>
             </div>
         </div>
@@ -259,29 +249,34 @@ eups distrib install -t v12_0 lsst_apps</pre>
                 <p>
                 DIRAC is creating an environment where scientists can harness interdisciplinary expertise to solve some of the most difficult questions facing Astronomy today. It  provides an interaction space between Astrophysics, Computer Science, Statistics, and other disciplines. It is a place where ideas across many disciplines come together and mature; a laboratory for devising new ways of extracting knowledge from complex systems. 
                 </p>
-            <!-- </div>
+                <p>If you are interesting in contributing to DIRAC, please contact Andy Connolly at <strong>ajc @ astro.washington.edu</strong>.</p>
+            </div>
         </div>
-        <div class="row">
-            <div class="col-md-6"> -->
+        <!-- <div class="row">
+            <div class="col-md-6">
                 <h4>Postdoctoral and/or Research Scientist Positions</h4>
                 <p>
                 The DIRAC Institute and LSST group in the Astronomy department at the University of Washington have openings for two postdoctoral or research scientist positions. These positions are to help with the processing and analysis of data from the Zwicky Transit Factory (ZTF) and the Large Synoptic Survey Telescope (LSST). The University of Washington is a new member of the ZTF collaboration, a time-domain survey that will see first light in 2017 when it will scan over 3750 square degrees an hour to a depth of 20.5-21 mag. As part of its contributions to ZTF, UW and the DIRAC Institute (a newly established institute for data intensive survey astrophysics at the University of Washington) will lead the development of a database for storing and serving transient and variable sources detected by ZTF.        
                 </p>
             </div>
-        </div> <!-- row -->
-    </div> <!-- container -->
-</section>
+        </div>  -->
+    </div>
+</section> 
 
 <section class="container-fluid" id="lsst">
     <div class="container">
         <div class="row">
-            <h2>The LSST Survey and DIRAC</h2>
-            <p>8.4 meter, wide-field, f/1.2 telescope.<br/>
-            3.2 Gigapixel, 189 4k x 4k CCD camera, with 2-second readout.<br/>
-            PetaFLOPS of computing power, hundreds of PB of storage, gigabit long-haul networks.</p>
+            <div class="col-12">
+                <h2>The LSST Survey and DIRAC</h2>
+                <p>8.4 meter, wide-field, f/1.2 telescope.<br/>
+                3.2 Gigapixel, 189 4k x 4k CCD camera, with 2-second readout.<br/>
+                PetaFLOPS of computing power, hundreds of PB of storage, gigabit long-haul networks.</p>
+            </div>
         </div>
         <div class="row">
-            <h4>Turning the sky into a database.</h4>
+            <div class="col-12">
+                <h4>Turning the sky into a database.</h4>
+            </div>
         </div>
     </div>
 </section>
@@ -327,6 +322,12 @@ eups distrib install -t v12_0 lsst_apps</pre>
         </div>
         <div class="row">
             <div class="col-12">
+                <h4>Welcoming New Hires</h4>
+                <p>We are pleased to welcome Dr. Daniela Huppenkothen as Associate Director for the DIRAC Institute. Dr. Huppenkothen will lead a team of researchers who will address fundamental questions in astrophysics and define the research directions in which DIRAC will expand.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
                 <h5>Andy Connolly&nbsp;&nbsp;<small class="text-info">Director</small></h5>
             </div>
             <div class="col-md-3 col-sm-5">
@@ -356,17 +357,24 @@ eups distrib install -t v12_0 lsst_apps</pre>
 
     <div class="container">
         <div class="row">
-            <div class="col-12 center">
+            <div class="col-12">
                 <h4>Sponsors</h4>
-                <img src="{{site.baseurl}}/img/logos/nsf4.gif" class="logo-agency" alt="NSF">
-                <img src="{{site.baseurl}}/img/logos/doe.png" class="logo-agency" alt="DOE">
-                <img src="{{site.baseurl}}/img/logos/lsst.png" class="logo" alt="LSST Headquarters">
+                <ul class="col-md-6" style="list-style:none;">
+                    <li><img src="{{site.baseurl}}/img/logos/nsf4.gif" class="logo-agency" alt="NSF"><a href="https://nsf.gov" target="_blank" alt="NSF">The National Science Foundation</a></li>
+                    <li><img src="{{site.baseurl}}/img/logos/doe.png" class="logo-agency" alt="DOE"><a href="https://energy.gov" target="_blank" alt="DOE">The U.S. Department of Energy</a></li>
+                </ul>
+                <ul class="col-md-6" style="list-style:none;">
+                    <li><a href="http://www.simonyifund.org/default.asp" target="_blank" alt="Simonyi Fund">The Simonyi Fund</a></li>
+                    <li><a href="https://b612foundation.org/" target="_blank" alt="B612">The B612 Foundation</a></li>
+                    <li><a href="http://www.wrfseattle.org/" target="_blank" alt="Washington Research Foundation">The Washington Research Foundation</a></li>
+                </ul>
+                <!-- <img src="{{site.baseurl}}/img/logos/lsst.png" class="logo" alt="LSST Headquarters">
                 <img src="{{site.baseurl}}/img/logos/princeton.png" class="logo" alt="Princeton University">
                 <img src="{{site.baseurl}}/img/logos/uw.png" class="logo" alt="University of Washington">
                 <img src="{{site.baseurl}}/img/logos/ncsa.png" class="logo" alt="NCSA">
                 <img src="{{site.baseurl}}/img/logos/ipac.png" class="logo" alt="IPAC">
                 <img src="{{site.baseurl}}/img/logos/slac.png" class="logo" alt="SLAC National Accelerator Lab">
-                <img src="{{site.baseurl}}/img/logos/noao.png" class="logo" alt="NOAO">
+                <img src="{{site.baseurl}}/img/logos/noao.png" class="logo" alt="NOAO"> -->
             </div>
     </div>
 </section> <!-- /.container -->
